LPS-152491 [Raylife Ap] Fixing sidebar links overflow

--- a/modules/apps/site-initializer/site-initializer-raylife-ap/src/main/resources/site-initializer/fragments/src/agent-portal/fragments/layout/index.css
+++ b/modules/apps/site-initializer/site-initializer-raylife-ap/src/main/resources/site-initializer/fragments/src/agent-portal/fragments/layout/index.css
@@ -33,8 +33,8 @@
 	opacity: 10;
 }
 
-.sidebar-container:hover .footer-bar .avatar-container,
-.sidebar-container:hover .middle-bar .menu-item-name {
+.sidebar-container .footer-bar .avatar-container,
+.sidebar-container .middle-bar .menu-item-name {
 	overflow: hidden;
 }
 
